// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Others 1`] = `undefined`;

exports[`Others 2`] = `
[
  Variable {
    "blockNames": [
      "test",
    ],
    "blockType": "variable",
    "name": "test",
  },
  Variable {
    "blockNames": [
      "test2",
    ],
    "blockType": "variable",
    "name": "test2",
  },
  Data {
    "blockNames": [
      "aws_vpc",
      "test",
    ],
    "blockType": "data",
    "name": "test",
    "type": "aws_vpc",
  },
  Module {
    "blockNames": [
      "test",
    ],
    "blockType": "module",
    "name": "test",
  },
  Resource {
    "blockNames": [
      "aws_vpc",
      "test",
    ],
    "blockType": "resource",
    "name": "test",
    "type": "aws_vpc",
  },
  Data {
    "blockNames": [
      "aws_vpc",
      "test",
    ],
    "blockType": "data",
    "name": "test",
    "type": "aws_vpc",
  },
  Data {
    "blockNames": [
      "aws_vpc",
      "test2",
    ],
    "blockType": "data",
    "name": "test2",
    "type": "aws_vpc",
  },
  Resource {
    "blockNames": [
      "innerBlock",
      "innerBlock",
    ],
    "blockType": "resource",
    "name": "innerBlock",
    "type": "innerBlock",
  },
  Locals {
    "blockNames": [],
    "blockType": "locals",
  },
  Resource {
    "blockNames": [
      "locals",
      "locals",
    ],
    "blockType": "resource",
    "name": "locals",
    "type": "locals",
  },
  Import {
    "blockNames": [],
    "blockType": "import",
  },
  Resource {
    "blockNames": [
      "tags",
      "tags",
    ],
    "blockType": "resource",
    "name": "tags",
    "type": "tags",
  },
  Comment {
    "blockNames": [],
    "blockType": "comment",
    "comment": "comment",
  },
  Comment {
    "blockNames": [],
    "blockType": "comment",
    "comment": "
    line1
    line2
    line3
    line4
  ",
  },
  Moved {
    "blockNames": [],
    "blockType": "moved",
  },
  Removed {
    "blockNames": [],
    "blockType": "removed",
  },
  Resource {
    "blockNames": [
      "tfg2",
      "tfg2",
    ],
    "blockType": "resource",
    "name": "tfg2",
    "type": "tfg2",
  },
]
`;

exports[`Others 3`] = `
{
  "test2": "test",
}
`;

exports[`Others 4`] = `
{
  "tf": "variable "test"{
type = string
}

variable "test2"{
type = string
}

data "aws_vpc" "test"{
cidr_block = "test"
}

module "test"{
source = "./test"
}

resource "aws_vpc" "test"{
cidr_block = "test"
tags = {
a = "a"
}
}

data "aws_vpc" "test"{
filter {
name = "tag:a"
values = [
"a"
]
}
cidr_block = "test"
}

data "aws_vpc" "test2"{
filter {
name = "tag:a"
values = [
"a"
]
}
cidr_block = "test"
}

resource "innerBlock" "innerBlock"{
a = "a"
provisioner "local-exec"{
command = "echo hello"
}
provisioner "local-exec"{
command = "echo world"
}
}

locals{
a = "a"
b = 123
c = aws_vpc.test.x
}

resource "locals" "locals"{
a = local.a
}

import{
to = innerBlock.innerBlock
id = "id"
provider = arg
}

resource "tags" "tags"{
tags = {
a = "a"
b = "b c d"
}
}

# comment

# line1
# line2
# line3
# line4

moved{
from = resource.a
to = innerBlock.innerBlock
}

removed{
from = resource.b
lifecycle {
destroy = false
}
}

resource "tfg2" "tfg2"{
tfg2 = "tfg2"
}

",
  "tfvars": "test2 = "test"

",
}
`;

exports[`Others 5`] = `
"variable "test"{
type = string
}

variable "test2"{
type = string
}

data "aws_vpc" "test"{
cidr_block = "test"
}

module "test"{
source = "./test"
}

resource "aws_vpc" "test"{
cidr_block = "test"
tags = {
a = "a"
}
}

data "aws_vpc" "test"{
filter {
name = "tag:a"
values = [
"a"
]
}
cidr_block = "test"
}

data "aws_vpc" "test2"{
filter {
name = "tag:a"
values = [
"a"
]
}
cidr_block = "test"
}

resource "innerBlock" "innerBlock"{
a = "a"
provisioner "local-exec"{
command = "echo hello"
}
provisioner "local-exec"{
command = "echo world"
}
}

locals{
a = "a"
b = 123
c = aws_vpc.test.x
}

resource "locals" "locals"{
a = local.a
}

import{
to = innerBlock.innerBlock
id = "id"
provider = arg
}

resource "tags" "tags"{
tags = {
a = "a"
b = "b c d"
}
}

# comment

# line1
# line2
# line3
# line4

moved{
from = resource.a
to = innerBlock.innerBlock
}

removed{
from = resource.b
lifecycle {
destroy = false
}
}

resource "tfg2" "tfg2"{
tfg2 = "tfg2"
}

"
`;

exports[`Others 6`] = `
"test2 = "test"

"
`;
